syntax = "proto3";
package pb;

option go_package = "protogen";

service PingB {
    rpc PingB(PingBReq) returns(PingBResponse) {};
}

message PingBReq{
    int64 now = 1;
    string from = 2;
};

message PingBResponse{
    int64 now = 1;
};